test/files/errors/if_missing_then.scm
; Test: If with missing then - should return exit code 84
(if #t)
